--- a/120-years_olympic_history.ipynb
+++ b/120-years_olympic_history.ipynb
@@ -1659,7 +1659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Even though the United States still holds the most gold medals in athletics, the major difference lies in the top 3 countries with the most gold medals in athletics, where African countries like Kenya and Jamaica have started to dominate, especially after the 2000s. Will this continue in the Olympics Paris 2024 ?"
+    "+ Even though the United States still holds the most gold medals in athletics, the major difference lies in the top 3 countries with the most gold medals in athletics. Countries with predominantly African descent populations, such as Kenya and Jamaica, have emerged as dominant forces, particularly since the 2000s. The question arises: will this trend persist in the Paris 2024 Olympics?"
    ]
   },
   {
