--- a/120-years_olympic_history.ipynb
+++ b/120-years_olympic_history.ipynb
@@ -1711,7 +1711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:yellow; font-size:25px\"> Closing Remarks:</span>\n",
+    "<span style=\"color:red; font-size:25px\"> Closing Remarks:</span>\n",
     "+ The United States has really owned it over the years, snagging the most gold and overall medals, along with boasting the athlete with the most gold medals ever.\n",
     "+ It's pretty cool to see how the gender gap in Olympic participation has been shrinking over the past 120 years.\n",
     "+ There's a big gap in Swimming and Athletics, with mostly Europeans dominating swimming and mainly Africans leading the charge in running.\n",
